--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -14,5 +18,4 @@
 
 body {
   background: #1E3A24;
-  scroll-behavior: smooth
 }
